cf_analysis_results/checkerframework_3.42.0_results/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8.txt
../dataset/june2020_dataset/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/socket/UDPSocket.java:31: error: (required.method.not.called) $$ 4 $$ method close $$ new java.net.DatagramSocket(port) $$ java.net.DatagramSocket $$ regular method exit $$ ( 835, 868 ) $$ @MustCall method close may not have been invoked on new java.net.DatagramSocket(port) or any of its aliases.
		this.socket = new java.net.DatagramSocket(port);
		              ^
  The type of object is: java.net.DatagramSocket.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/socket/TCPSocket.java:26: error: (reset.not.owning) $$ 2 $$ bind $$ this.serverSocket $$ ( 788, 873 ) $$ Calling method bind resets the must-call obligations of the expression this.serverSocket, which is non-owning. Either annotate its declaration with an @Owning annotation, extract it into a local variable, or write a corresponding @CreatesMustCallFor annotation on the method that encloses this statement.
		this.serverSocket.bind(new InetSocketAddress(InetAddress.getLoopbackAddress(), port));
		                      ^
../dataset/june2020_dataset/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/socket/TCPSocket.java:38: error: (required.method.not.called) $$ 4 $$ method close $$ connectionSocket $$ java.net.Socket $$ regular method exit $$ ( 1077, 1117 ) $$ @MustCall method close may not have been invoked on connectionSocket or any of its aliases.
				connectionSocket = serverSocket.accept();
				                 ^
  The type of object is: java.net.Socket.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/application/applicationchannel/AbsApplicationChannel.java:83: error: (required.method.not.called) $$ 4 $$ method close $$ new OutputStream(){
		this.bufferedOutputStream = new BufferedOutputStream(new OutputStream() {
		                                                     ^
      
      () {
          super();
      }
      Data bufData = new Data();
      Data singleByteData = new Data(1);
      
      @Override()
      public void write(int b) throws IOException {
          singleByteData.setByte(0, (byte)b);
          dataCallback.callback(singleByteData);
      }
      
      @Override()
      public void write(byte[] b, int off, int len) throws IOException {
          bufData.reset(b, off, len);
          dataCallback.callback(bufData);
      }
  } $$ <anonymous java.io.OutputStream> $$ regular method exit $$ ( 2852, 3266 ) $$ @MustCall method close may not have been invoked on new OutputStream(){
      
      () {
          super();
      }
      Data bufData = new Data();
      Data singleByteData = new Data(1);
      
      @Override()
      public void write(int b) throws IOException {
          singleByteData.setByte(0, (byte)b);
          dataCallback.callback(singleByteData);
      }
      
      @Override()
      public void write(byte[] b, int off, int len) throws IOException {
          bufData.reset(b, off, len);
          dataCallback.callback(bufData);
      }
  } or any of its aliases.
  The type of object is: <anonymous java.io.OutputStream>.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/application/applicationchannel/AbsApplicationChannel.java:103: error: (required.method.not.called) $$ 4 $$ method close $$ new ByteBufInputStream(asyncPipeByteBuf) $$ org.dclayer.net.buf.ByteBufInputStream $$ regular method exit $$ ( 3371, 3411 ) $$ @MustCall method close may not have been invoked on new ByteBufInputStream(asyncPipeByteBuf) or any of its aliases.
		this.byteBufInputStream = new ByteBufInputStream(asyncPipeByteBuf);
		                          ^
  The type of object is: org.dclayer.net.buf.ByteBufInputStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/application/ApplicationInstance.java:81: error: (required.method.not.called) $$ 4 $$ method close $$ socket $$ java.net.Socket $$ possible exceptional exit due to socket.getInputStream() with exception type java.io.IOException $$ ( 3224, 3270 ) $$ @MustCall method close may not have been invoked on socket or any of its aliases.
			Socket socket = new Socket(inetAddress, port);
			       ^
  The type of object is: java.net.Socket.
  Reason for going out of scope: possible exceptional exit due to socket.getInputStream() with exception type java.io.IOException
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
6 errors
